--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "description": "JavaScript development environment Pluralsight course by Cory House",
     "scripts": {
       "prestart": "babel-node buildScripts/startMessage.js",
-      "start": "babel-node buildScripts/srcServer.js",
-      "share": "lt --port 3000"
+      "start": "babel-node buildScripts/srcServer.js lint:watch",
+      "share": "lt --port 3000",
+      "lint": "esw webpack.config.* src buildScripts --color",
+      "lint:watch": "npm run lint -- --watch"
     },
+
     "author": "Cory House",
     "license": "MIT",
     "dependencies": {
